--- a/ui/app/styles/utils/z-indices.scss
+++ b/ui/app/styles/utils/z-indices.scss
@@ -1,7 +1,8 @@
 $z-tooltip: 250;
-$z-header: 210;
 $z-gutter: 220;
 $z-gutter-backdrop: 219;
+$z-header: 210;
 $z-subnav: 200;
+$z-popover: 150;
 $z-base: 100;
 $z-icon-decorators: 50;
